# p2p-energy-swap

./: .env  .env.example  .gitignore  =3.15  Anchor.toml  Makefile  README.md  buyer.json  db.sqlite3  energy_trading.db  index.html  p2p  package-lock.json  package.json  pyproject.toml  quick_callback_setup.py  run_all.sh  setup_callback.bat  setup_ngrok_callback.py  simple_ai_service.py  tsconfig.json  update_energy.py  wokwi_bridge.py  wokwi_http_bridge.py
.devcontainer/: Dockerfile  devcontainer.json
accounts/: models.py  serializers.py  urls.py  views.py
app/: globals.css  layout.tsx  page.tsx
app/energy/: page.tsx
blockchain/energy_token_program/programs/energy_token_program/: Cargo.toml
energy-p2p-bc/: .gitignore
hooks/: use-toast.tsx
iot/: wattchain_iot.ino
iotc/: HouseholdMeter.json  device_simulator.py
p2p-energy-backend/: .env  .env.example  README.md  db.sqlite3  docker-compose.yml  manage.py
p2p-energy-blockchain-service/: .env.example  README.md  requirements.txt  simple_server.py
p2p-energy-swap/: .env  .env.local  index.html  package.json  tailwind.config.ts  vite.config.ts
p2p-energy-swap-Ai/: .env  DEMO_README.md  energy_trading.db  main_app.py  setup_ngrok_callback.ps1
p2p_energy_backend/: asgi.py  settings.py
scripts/: fullstack_walkthrough.py  install-cli.sh  integration_test.py  setup-dev.sh  update_wokwi_host.sh
src/: App.tsx
tests/: p2p_energy_swap.ts
wattchain/: README.md  boot.py  config.json  diagram.json  main.py  platformio.ini  update_device.py  wattchain.ino  wokwi-project.txt  wokwi.toml  wokwi_oneliner.py
(+125 files in other folders)
